[gd_scene load_steps=5 format=2]

[ext_resource path="res://Recursos/Fuentes/CutiveMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Temas/default.tres" type="Theme" id=2]
[ext_resource path="res://UiScene/Script/MainScene.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 19
outline_size = 2
outline_color = Color( 0.164706, 0.176471, 0.227451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.356863, 0.32549, 0.501961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 715.0
margin_bottom = 1507.0

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 710.0
margin_bottom = 43.0
theme = ExtResource( 2 )
text = "Contador De Victorias"
align = 1
valign = 1

[node name="Subtitulo Juego" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 710.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "Naruto Shippuden Ultimate Ninja Storm 3"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 710.0
margin_bottom = 77.0

[node name="atrasBoton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 140.0
margin_bottom = 141.0
rect_min_size = Vector2( 140, 60 )
size_flags_horizontal = 0
text = "Atr√°s"

[node name="contenedorUsuarios" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 710.0
margin_bottom = 1398.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="contenedorUsuarios" type="VBoxContainer" parent="MarginContainer/VBoxContainer/contenedorUsuarios"]
margin_right = 710.0
margin_bottom = 1253.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1402.0
margin_right = 710.0
margin_bottom = 1502.0
size_flags_vertical = 9

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 710.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="AgregarJugadorBoton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 703.0
margin_bottom = 93.0
size_flags_vertical = 5
text = "Agregar Jugador"

[connection signal="pressed" from="MarginContainer/VBoxContainer/atrasBoton" to="." method="_on_atrasBoton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/AgregarJugadorBoton" to="." method="_on_AgregarJugadorBoton_pressed"]
